--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -16,6 +16,7 @@
 .Button:focus:not(.Button--disabled[disabled]) {
   outline: none;
   box-shadow: 0 0 0 2px var(--brand-color-canvas-default), 0 0 0 5px var(--brand-color-focus);
+  transition: none;
 }
 
 .Button--label {
