--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -9,7 +9,7 @@
   box-shadow: var(--brand-Card-visual-shadow);
   border-radius: 6px;
   padding: var(--base-size-32);
-  transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+  transition: transform var(--brand-Card-animation-duration) var(--brand-Card-animation-easing);
 }
 
 .Card:hover {
