--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -7,7 +7,7 @@
   background-color: var(--brand-Card-background-default);
   border: 1px solid var(--brand-color-border-default);
   box-shadow: var(--brand-Card-visual-shadow);
-  border-radius: 6px;
+  border-radius: var(--brand-borderRadius-medium);
   padding: var(--base-size-32);
   transition: transform var(--brand-Card-animation-duration) var(--brand-Card-animation-easing);
 }
