--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -20,7 +20,7 @@
 
 .Button__text {
   position: relative;
-  top: 0.5px;
+  top: 0.5px; /* visual offset for off-center mona sans glyphs */
   line-height: var(--brand-text-lineHeight-200);
 }
 
