Update docs, fix image sizing

--- a/packages/react/src/Avatar/Avatar.module.css
+++ b/packages/react/src/Avatar/Avatar.module.css
@@ -14,8 +14,9 @@
   border-radius: var(--brand-borderRadius-medium);
 }
 
-.Avatar-iamge {
-  display: block;
+.Avatar__image {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
