--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -145,6 +145,17 @@
 }
 
 @media (forced-colors: active) {
+  .Button--primary,
+  .Button--secondary,
+  .Button--disabled:hover {
+    outline: var(--brand-borderWidth-thick) solid transparent;
+    outline-offset: 2px;
+  }
+
+  .Button--disabled {
+    outline-color: GrayText;
+  }
+
   /* Retains focus indicator when in "Windows High Contrast Mode". */
   .Button:focus:not(.Button--disabled[disabled]) {
     outline: var(--brand-borderWidth-thick) solid;
