add reversed prop to Link

--- a/packages/react/src/ExpandableArrow/ExpandableArrow.module.css
+++ b/packages/react/src/ExpandableArrow/ExpandableArrow.module.css
@@ -16,3 +16,11 @@
 .ExpandableArrow-stem--expanded {
   stroke-dashoffset: 20;
 }
+
+.ExpandableArrow--reversed {
+  transform: rotate(180deg);
+}
+
+.ExpandableArrow--reversed.ExpandableArrow--expanded {
+  transform: rotate(180deg) translateX(4px);
+}
