--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -16,6 +16,27 @@
   transform: scale3d(1.025, 1.025, 1);
 }
 
+.Card__label {
+  align-self: flex-start;
+  color: var(--brand-Card-label-default);
+  border: var(--brand-borderWidth-thin) solid;
+  border-radius: var(--brand-borderRadius-full);
+  padding: calc(var(--base-size-4) - 2px) var(--base-size-12);
+  margin-bottom: var(--base-size-32);
+  display: inline-flex;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.Card__label-wrapper {
+  line-height: var(--brand-text-lineHeight-200);
+}
+
+.Card__label--text {
+  font-weight: var(--base-text-weight-semibold);
+  color: inherit;
+}
+
 .Card__heading {
   margin-bottom: var(--base-size-20);
 }
