--- a/packages/react/src/ActionMenu/ActionMenu.stories.module.css
+++ b/packages/react/src/ActionMenu/ActionMenu.stories.module.css
@@ -3,8 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 48px;
-  width: 48px;
+  height: var(--base-size-48);
+  width: var(--base-size-48);
   border-radius: var(--brand-borderRadius-large);
   background-color: var(--brand-color-canvas-default);
 }
