--- a/packages/react/src/ActionMenu/ActionMenu.module.css
+++ b/packages/react/src/ActionMenu/ActionMenu.module.css
@@ -57,7 +57,7 @@
   }
 }
 .ActionMenu__menu::-webkit-scrollbar {
-  width: 12px;
+  width: var(--base-size-12);
 }
 
 .ActionMenu__menu::-webkit-scrollbar-track {
