--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -111,7 +111,7 @@
   transition: box-shadow 200ms;
 }
 
-.Button--subtle:hover {
+.Button--subtle:hover:not(.Button[disabled]) {
   box-shadow: inset 0 0 0 2px var(--brand-color-neutral-emphasisPlus);
 }
 
