--- a/packages/react/src/Label/Label.module.css
+++ b/packages/react/src/Label/Label.module.css
@@ -6,27 +6,23 @@
   display: inline-flex;
   color: inherit;
   position: relative;
-  z-index: 1;
+  background: var(--brand-color-canvas-default);
+  background-clip: padding-box;
+  border: solid var(--brand-borderWidth-thin) transparent;
 }
 
 .Label:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
   content: '';
-  background-image: linear-gradient(var(--brand-color-canvas-default), var(--brand-color-canvas-default)),
-    radial-gradient(
-      circle at top left,
-      var(--brand-Label-color-start, currentcolor),
-      var(--brand-Label-color-end, currentcolor)
-    );
-  background-clip: content-box, border-box;
-  background-origin: border-box;
-  border: double 1px transparent;
-  border-radius: 2em;
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  margin: calc(var(--brand-borderWidth-thin) * -1);
+  border-radius: inherit;
+  background: linear-gradient(
+    -70deg,
+    var(--brand-Label-color-start, currentcolor) 0%,
+    var(--brand-Label-color-end, currentcolor) 100%
+  );
 }
 
 .Label--size-small {
