--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -112,7 +112,7 @@
 }
 
 .Button--subtle:hover {
-  box-shadow: inset 0 0 0 2px var(--brand-color-neutral-emphasisPlus);
+  box-shadow: var(--brand-Button-shadow-subtle-hover);
 }
 
 .Button--size-medium {
