--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -10,6 +10,7 @@
   border-radius: var(--brand-borderRadius-medium);
   padding: var(--base-size-32);
   transition: transform var(--brand-Card-animation-duration) var(--brand-Card-animation-easing);
+  will-change: transform;
 }
 
 .Card:hover {
@@ -17,22 +18,7 @@
 }
 
 .Card__label {
-  align-self: flex-start;
-  color: var(--brand-color-text-default);
-  border: var(--brand-borderWidth-thin) solid;
-  border-radius: var(--brand-borderRadius-full);
-  padding: calc(var(--base-size-4) - 1px) var(--base-size-16);
   margin-bottom: var(--base-size-24);
-  display: inline-flex;
-  justify-content: center;
-  vertical-align: middle;
-}
-
-.Card__label--text {
-  font-weight: var(--base-text-weight-semibold);
-  color: inherit;
-  position: relative;
-  top: 0.5px;
 }
 
 .Card__heading {
