Add `combobox` support to `SubdomainNavBar` (#225)
* Add combobox support to `SubdomainNavBar`

* Add `scrollIntoView` functionality

* Adds "Enter" functionality, live region updates, storybook test

* Fix lint, timing tests

* Add back `tabindex`

* Prettier, lint fixes

* Ensures combobox resets when closed through btn

* Remove added test

* Add changeset

* Update PR based on feedback

* Fix lint issues

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -593,6 +593,10 @@
     var(--brand-SubdomainNavBar-search-results-border-default, #b7bfc7);
 }
 
+.SubdomainNavBar-search-result-item[aria-selected='true'] a {
+  outline: var(--brand-color-focus) auto var(--brand-borderWidth-thick);
+}
+
 .SubdomainNavBar-search-result-item-container {
   letter-spacing: var(--brand-heading-letterSpacing-400);
   font-size: var(--brand-text-size-400);
