--- a/packages/react/src/River/River.module.css
+++ b/packages/react/src/River/River.module.css
@@ -1,8 +1,9 @@
 .River {
   display: grid;
-  gap: var(--brand-River-gap-column-medium);
+  gap: var(--brand-River-small-gap);
   grid-auto-rows: min-content;
-  padding: var(--brand-River-layout-margin-vertical);
+  padding-top: var(--brand-River-small-padding);
+  padding-bottom: var(--brand-River-small-padding);
 }
 
 .River--align-center {
@@ -41,6 +42,9 @@
 @media screen and (min-width: 34rem) {
   .River {
     grid-template-rows: unset;
+    gap: var(--brand-River-medium-gap);
+    padding-top: var(--brand-River-medium-padding);
+    padding-bottom: var(--brand-River-medium-padding);
   }
   .River--50-50 {
     grid-template-columns: [content] 1fr [visual] 1fr;
@@ -100,6 +104,8 @@
 /* Large breakpoint and up */
 @media screen and (min-width: 63.25rem) {
   .River {
-    gap: var(--brand-River-gap-column-large);
+    gap: var(--brand-River-large-gap);
+    padding-top: var(--brand-River-large-padding);
+    padding-bottom: var(--brand-River-large-padding);
   }
 }
