--- a/packages/react/src/Grid/Grid.module.css
+++ b/packages/react/src/Grid/Grid.module.css
@@ -1,23 +1,23 @@
 .Grid {
   display: grid;
-  grid-template-columns: repeat(12, minmax(0, 1fr)); 
-  grid-gap: var(--grid-column-gap-normal); 
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-gap: var(--grid-spacing-normal);
 }
 
 .Grid + .Grid {
-  margin-top: var(--base-size-24); 
+  margin-top: var(--grid-spacing-normal);
 }
 
 .Grid--condensed {
-  grid-gap: var(--grid-column-gap-condensed);
+  grid-gap: var(--grid-spacing-condensed);
 }
 
 .Grid--normal {
-  grid-gap: var(--grid-column-gap-normal);
+  grid-gap: var(--grid-spacing-normal);
 }
 
 .Grid--spacious {
-  grid-gap: var(--grid-column-gap-spacious);
+  grid-gap: var(--grid-spacing-spacious);
 }
 
 .Grid__column {
@@ -25,31 +25,28 @@
 }
 
 .Grid--gutter-condensed {
-  padding-left: var(--grid-column-gap-condensed);
-  padding-right: var(--grid-column-gap-condensed);
+  padding-left: var(--grid-spacing-condensed);
+  padding-right: var(--grid-spacing-condensed);
 }
-
 
 .Grid--gutter-normal {
-  padding-left: var(--grid-column-gap-normal);
-  padding-right: var(--grid-column-gap-normal);
+  padding-left: var(--grid-spacing-normal);
+  padding-right: var(--grid-spacing-normal);
 }
 
-
 .Grid--gutter-spacious {
-  padding-left: var(--grid-column-gap-spacious);
-  padding-right: var(--grid-column-gap-spacious);
+  padding-left: var(--grid-spacing-spacious);
+  padding-right: var(--grid-spacing-spacious);
 }
 
 .Grid--has-overlay .Grid__column {
-  background-color: var(--grid-column-overlay-color); 
-  min-height: var(--base-size-24)
+  background-color: var(--grid-column-overlay-color);
+  min-height: var(--base-size-24);
 }
-
 
 /**
  * Non-responsive, default values
- */ 
+ */
 .Grid__column--span-1 {
   grid-column: auto / span 1;
 }
@@ -146,58 +143,57 @@
   grid-column-start: 12;
 }
 
-
 /**
  * Responsive style overrides
- */ 
- 
+ */
+
 /* XSMALL breakpoint */
 @media screen and (max-width: 20rem) {
   /* XSMALL span */
   .Grid__column--xsmall-span-1 {
     grid-column: auto / span 1;
   }
-  
+
   .Grid__column--xsmall-span-2 {
     grid-column: auto / span 2;
   }
-  
+
   .Grid__column--xsmall-span-3 {
     grid-column: auto / span 3;
   }
-  
+
   .Grid__column--xsmall-span-4 {
     grid-column: auto / span 4;
   }
-  
+
   .Grid__column--xsmall-span-5 {
     grid-column: auto / span 5;
   }
-  
+
   .Grid__column--xsmall-span-6 {
     grid-column: auto / span 6;
   }
-  
+
   .Grid__column--xsmall-span-7 {
     grid-column: auto / span 7;
   }
-  
+
   .Grid__column--xsmall-span-8 {
     grid-column: auto / span 8;
   }
-  
+
   .Grid__column--xsmall-span-9 {
     grid-column: auto / span 9;
   }
-  
+
   .Grid__column--xsmall-span-10 {
     grid-column: auto / span 10;
   }
-  
+
   .Grid__column--xsmall-span-11 {
     grid-column: auto / span 11;
   }
-  
+
   .Grid__column--xsmall-span-12 {
     grid-column: auto / span 12;
   }
@@ -206,47 +202,47 @@
   .Grid__column--xsmall-start-1 {
     grid-column-start: 1;
   }
-  
+
   .Grid__column--xsmall-start-2 {
     grid-column-start: 2;
   }
-  
+
   .Grid__column--xsmall-start-3 {
     grid-column-start: 3;
   }
-  
+
   .Grid__column--xsmall-start-4 {
     grid-column-start: 4;
   }
-  
+
   .Grid__column--xsmall-start-5 {
     grid-column-start: 5;
   }
-  
+
   .Grid__column--xsmall-start-6 {
     grid-column-start: 6;
   }
-  
+
   .Grid__column--xsmall-start-7 {
     grid-column-start: 7;
   }
-  
+
   .Grid__column--xsmall-start-8 {
     grid-column-start: 8;
   }
-  
+
   .Grid__column--xsmall-start-9 {
     grid-column-start: 9;
   }
-  
+
   .Grid__column--xsmall-start-10 {
     grid-column-start: 10;
   }
-  
+
   .Grid__column--xsmall-start-11 {
     grid-column-start: 11;
   }
-  
+
   .Grid__column--xsmall-start-12 {
     grid-column-start: 12;
   }
@@ -258,47 +254,47 @@
   .Grid__column--small-span-1 {
     grid-column: auto / span 1;
   }
-  
+
   .Grid__column--small-span-2 {
     grid-column: auto / span 2;
   }
-  
+
   .Grid__column--small-span-3 {
     grid-column: auto / span 3;
   }
-  
+
   .Grid__column--small-span-4 {
     grid-column: auto / span 4;
   }
-  
+
   .Grid__column--small-span-5 {
     grid-column: auto / span 5;
   }
-  
+
   .Grid__column--small-span-6 {
     grid-column: auto / span 6;
   }
-  
+
   .Grid__column--small-span-7 {
     grid-column: auto / span 7;
   }
-  
+
   .Grid__column--small-span-8 {
     grid-column: auto / span 8;
   }
-  
+
   .Grid__column--small-span-9 {
     grid-column: auto / span 9;
   }
-  
+
   .Grid__column--small-span-10 {
     grid-column: auto / span 10;
   }
-  
+
   .Grid__column--small-span-11 {
     grid-column: auto / span 11;
   }
-  
+
   .Grid__column--small-span-12 {
     grid-column: auto / span 12;
   }
@@ -307,51 +303,50 @@
   .Grid__column--small-start-1 {
     grid-column-start: 1;
   }
-  
+
   .Grid__column--small-start-2 {
     grid-column-start: 2;
   }
-  
+
   .Grid__column--small-start-3 {
     grid-column-start: 3;
   }
-  
+
   .Grid__column--small-start-4 {
     grid-column-start: 4;
   }
-  
+
   .Grid__column--small-start-5 {
     grid-column-start: 5;
   }
-  
+
   .Grid__column--small-start-6 {
     grid-column-start: 6;
   }
-  
+
   .Grid__column--small-start-7 {
     grid-column-start: 7;
   }
-  
+
   .Grid__column--small-start-8 {
     grid-column-start: 8;
   }
-  
+
   .Grid__column--small-start-9 {
     grid-column-start: 9;
   }
-  
+
   .Grid__column--small-start-10 {
     grid-column-start: 10;
   }
-  
+
   .Grid__column--small-start-11 {
     grid-column-start: 11;
   }
-  
+
   .Grid__column--small-start-12 {
     grid-column-start: 12;
   }
-
 }
 
 /* MEDIUM breakpoint */
@@ -360,31 +355,31 @@
   .Grid__column--medium-span-1 {
     grid-column: auto / span 1;
   }
-  
+
   .Grid__column--medium-span-2 {
     grid-column: auto / span 2;
   }
-  
+
   .Grid__column--medium-span-3 {
     grid-column: auto / span 3;
   }
-  
+
   .Grid__column--medium-span-4 {
     grid-column: auto / span 4;
   }
-  
+
   .Grid__column--medium-span-5 {
     grid-column: auto / span 5;
   }
-  
+
   .Grid__column--medium-span-6 {
     grid-column: auto / span 6;
   }
-  
+
   .Grid__column--medium-span-7 {
     grid-column: auto / span 7;
   }
-  
+
   .Grid__column--medium-span-8 {
     grid-column: auto / span 8;
   }
@@ -393,52 +388,51 @@
   .Grid__column--medium-start-1 {
     grid-column-start: 1;
   }
-  
+
   .Grid__column--medium-start-2 {
     grid-column-start: 2;
   }
-  
+
   .Grid__column--medium-start-3 {
     grid-column-start: 3;
   }
-  
+
   .Grid__column--medium-start-4 {
     grid-column-start: 4;
   }
-  
+
   .Grid__column--medium-start-5 {
     grid-column-start: 5;
   }
-  
+
   .Grid__column--medium-start-6 {
     grid-column-start: 6;
   }
-  
+
   .Grid__column--medium-start-7 {
     grid-column-start: 7;
   }
-  
+
   .Grid__column--medium-start-8 {
     grid-column-start: 8;
   }
-  
+
   .Grid__column--medium-start-9 {
     grid-column-start: 9;
   }
-  
+
   .Grid__column--medium-start-10 {
     grid-column-start: 10;
   }
-  
+
   .Grid__column--medium-start-11 {
     grid-column-start: 11;
   }
-  
+
   .Grid__column--medium-start-12 {
     grid-column-start: 12;
   }
 }
-
 
 /* LARGE breakpoint */
 @media screen and (min-width: 63.25rem) {
@@ -446,47 +440,47 @@
   .Grid__column--large-span-1 {
     grid-column: auto / span 1;
   }
-  
+
   .Grid__column--large-span-2 {
     grid-column: auto / span 2;
   }
-  
+
   .Grid__column--large-span-3 {
     grid-column: auto / span 3;
   }
-  
+
   .Grid__column--large-span-4 {
     grid-column: auto / span 4;
   }
-  
+
   .Grid__column--large-span-5 {
     grid-column: auto / span 5;
   }
-  
+
   .Grid__column--large-span-6 {
     grid-column: auto / span 6;
   }
-  
+
   .Grid__column--large-span-7 {
     grid-column: auto / span 7;
   }
-  
+
   .Grid__column--large-span-8 {
     grid-column: auto / span 8;
   }
-  
+
   .Grid__column--large-span-9 {
     grid-column: auto / span 9;
   }
-  
+
   .Grid__column--large-span-10 {
     grid-column: auto / span 10;
   }
-  
+
   .Grid__column--large-span-11 {
     grid-column: auto / span 11;
   }
-  
+
   .Grid__column--large-span-12 {
     grid-column: auto / span 12;
   }
@@ -495,52 +489,51 @@
   .Grid__column--large-start-1 {
     grid-column-start: 1;
   }
-  
+
   .Grid__column--large-start-2 {
     grid-column-start: 2;
   }
-  
+
   .Grid__column--large-start-3 {
     grid-column-start: 3;
   }
-  
+
   .Grid__column--large-start-4 {
     grid-column-start: 4;
   }
-  
+
   .Grid__column--large-start-5 {
     grid-column-start: 5;
   }
-  
+
   .Grid__column--large-start-6 {
     grid-column-start: 6;
   }
-  
+
   .Grid__column--large-start-7 {
     grid-column-start: 7;
   }
-  
+
   .Grid__column--large-start-8 {
     grid-column-start: 8;
   }
-  
+
   .Grid__column--large-start-9 {
     grid-column-start: 9;
   }
-  
+
   .Grid__column--large-start-10 {
     grid-column-start: 10;
   }
-  
+
   .Grid__column--large-start-11 {
     grid-column-start: 11;
   }
-  
+
   .Grid__column--large-start-12 {
     grid-column-start: 12;
   }
 }
-
 
 /* XLARGE breakpoint */
 @media screen and (min-width: 80rem) {
@@ -548,47 +541,47 @@
   .Grid__column--xlarge-span-1 {
     grid-column: auto / span 1;
   }
-  
+
   .Grid__column--xlarge-span-2 {
     grid-column: auto / span 2;
   }
-  
+
   .Grid__column--xlarge-span-3 {
     grid-column: auto / span 3;
   }
-  
+
   .Grid__column--xlarge-span-4 {
     grid-column: auto / span 4;
   }
-  
+
   .Grid__column--xlarge-span-5 {
     grid-column: auto / span 5;
   }
-  
+
   .Grid__column--xlarge-span-6 {
     grid-column: auto / span 6;
   }
-  
+
   .Grid__column--xlarge-span-7 {
     grid-column: auto / span 7;
   }
-  
+
   .Grid__column--xlarge-span-8 {
     grid-column: auto / span 8;
   }
-  
+
   .Grid__column--xlarge-span-9 {
     grid-column: auto / span 9;
   }
-  
+
   .Grid__column--xlarge-span-10 {
     grid-column: auto / span 10;
   }
-  
+
   .Grid__column--xlarge-span-11 {
     grid-column: auto / span 11;
   }
-  
+
   .Grid__column--xlarge-span-12 {
     grid-column: auto / span 12;
   }
@@ -597,47 +590,47 @@
   .Grid__column--xlarge-start-1 {
     grid-column-start: 1;
   }
-  
+
   .Grid__column--xlarge-start-2 {
     grid-column-start: 2;
   }
-  
+
   .Grid__column--xlarge-start-3 {
     grid-column-start: 3;
   }
-  
+
   .Grid__column--xlarge-start-4 {
     grid-column-start: 4;
   }
-  
+
   .Grid__column--xlarge-start-5 {
     grid-column-start: 5;
   }
-  
+
   .Grid__column--xlarge-start-6 {
     grid-column-start: 6;
   }
-  
+
   .Grid__column--xlarge-start-7 {
     grid-column-start: 7;
   }
-  
+
   .Grid__column--xlarge-start-8 {
     grid-column-start: 8;
   }
-  
+
   .Grid__column--xlarge-start-9 {
     grid-column-start: 9;
   }
-  
+
   .Grid__column--xlarge-start-10 {
     grid-column-start: 10;
   }
-  
+
   .Grid__column--xlarge-start-11 {
     grid-column-start: 11;
   }
-  
+
   .Grid__column--xlarge-start-12 {
     grid-column-start: 12;
   }
@@ -649,47 +642,47 @@
   .Grid__column--xxlarge-span-1 {
     grid-column: auto / span 1;
   }
-  
+
   .Grid__column--xxlarge-span-2 {
     grid-column: auto / span 2;
   }
-  
+
   .Grid__column--xxlarge-span-3 {
     grid-column: auto / span 3;
   }
-  
+
   .Grid__column--xxlarge-span-4 {
     grid-column: auto / span 4;
   }
-  
+
   .Grid__column--xxlarge-span-5 {
     grid-column: auto / span 5;
   }
-  
+
   .Grid__column--xxlarge-span-6 {
     grid-column: auto / span 6;
   }
-  
+
   .Grid__column--xxlarge-span-7 {
     grid-column: auto / span 7;
   }
-  
+
   .Grid__column--xxlarge-span-8 {
     grid-column: auto / span 8;
   }
-  
+
   .Grid__column--xxlarge-span-9 {
     grid-column: auto / span 9;
   }
-  
+
   .Grid__column--xxlarge-span-10 {
     grid-column: auto / span 10;
   }
-  
+
   .Grid__column--xxlarge-span-11 {
     grid-column: auto / span 11;
   }
-  
+
   .Grid__column--xxlarge-span-12 {
     grid-column: auto / span 12;
   }
@@ -698,47 +691,47 @@
   .Grid__column--xxlarge-start-1 {
     grid-column-start: 1;
   }
-  
+
   .Grid__column--xxlarge-start-2 {
     grid-column-start: 2;
   }
-  
+
   .Grid__column--xxlarge-start-3 {
     grid-column-start: 3;
   }
-  
+
   .Grid__column--xxlarge-start-4 {
     grid-column-start: 4;
   }
-  
+
   .Grid__column--xxlarge-start-5 {
     grid-column-start: 5;
   }
-  
+
   .Grid__column--xxlarge-start-6 {
     grid-column-start: 6;
   }
-  
+
   .Grid__column--xxlarge-start-7 {
     grid-column-start: 7;
   }
-  
+
   .Grid__column--xxlarge-start-8 {
     grid-column-start: 8;
   }
-  
+
   .Grid__column--xxlarge-start-9 {
     grid-column-start: 9;
   }
-  
+
   .Grid__column--xxlarge-start-10 {
     grid-column-start: 10;
   }
-  
+
   .Grid__column--xxlarge-start-11 {
     grid-column-start: 11;
   }
-  
+
   .Grid__column--xxlarge-start-12 {
     grid-column-start: 12;
   }
