use padding-inline
Co-authored-by: Katie Langerman <18661030+langermank@users.noreply.github.com>

--- a/packages/react/src/Grid/Grid.module.css
+++ b/packages/react/src/Grid/Grid.module.css
@@ -30,8 +30,7 @@
 }
 
 .Grid--gutter-normal {
-  padding-left: var(--grid-spacing-normal);
-  padding-right: var(--grid-spacing-normal);
+  padding-inline: var(--grid-spacing-normal);
 }
 
 .Grid--gutter-spacious {
