use padding-inline
Co-authored-by: Katie Langerman <18661030+langermank@users.noreply.github.com>

--- a/packages/react/src/Grid/Grid.module.css
+++ b/packages/react/src/Grid/Grid.module.css
@@ -34,8 +34,7 @@
 }
 
 .Grid--gutter-spacious {
-  padding-left: var(--grid-spacing-spacious);
-  padding-right: var(--grid-spacing-spacious);
+  padding-inline: var(--grid-spacing-spacious);
 }
 
 .Grid--has-overlay .Grid__column {
